force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/ABRA_Flexi_Data_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Defines data mapping between Salesforce and ABRA FlexiBee</description>
    <label>ABRA Flexi Data Mapping</label>
    <pluralLabel>ABRA Flexi Data Mapping</pluralLabel>
</CustomObject>