force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/fields/ABRA_Flexi_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>ABRA_Flexi_Entity_Name__c</fullName>
    <description>Defines name of entity in ABRA for which mapping is.</description>
    <inlineHelpText>Defines name of entity in ABRA for which mapping is.</inlineHelpText>
    <label>ABRA Flexi Entity Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>