force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/fields/ABRA_Flexi_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ABRA_Flexi_Field_Name__c</fullName>
    <description>Name of field in ABRA Flexi.</description>
    <inlineHelpText>Name of field in ABRA Flexi.</inlineHelpText>
    <label>ABRA Flexi Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>