force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/fields/ABRA_Flexi_To_SFSC_Sync__c.field-meta.xml
<CustomField>
    <fullName>ABRA_Flexi_To_SFSC_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether data for this field should be synchronised from ABRA Flexi into SFSC.</description>
    <inlineHelpText>Determines whether data for this field should be synchronised from ABRA Flexi into SFSC.</inlineHelpText>
    <label>ABRA Flexi To SFSC Sync</label>
    <type>Checkbox</type>
</CustomField>