force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/fields/SFSC_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SFSC_Field_Name__c</fullName>
    <description>API Name of Field in Salesforce</description>
    <inlineHelpText>API Name of Field in Salesforce</inlineHelpText>
    <label>SFSC Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>