force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/fields/SFSC_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SFSC_SObject_Name__c</fullName>
    <description>Defines name of SObject for which mapping is.</description>
    <inlineHelpText>Defines name of SObject for which mapping is.</inlineHelpText>
    <label>SFSC SObject Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>