force-app/main/default/objects/ABRA_Flexi_Data_Mapping__mdt/fields/SFSC_To_ABRA_Flexi_Sync__c.field-meta.xml
<CustomField>
    <fullName>SFSC_To_ABRA_Flexi_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether data for this field should be synchronised from SFSC into ABRA Flexi.</description>
    <inlineHelpText>Determines whether data for this field should be synchronised from SFSC into ABRA Flexi.</inlineHelpText>
    <label>SFSC To ABRA Flexi Sync</label>
    <type>Checkbox</type>
</CustomField>